# scantailor-deviant

./: CMakeLists.txt
.build/: build.ps1  build.sh  check_scripts.sh  package.sh  test.ps1
.build/st-vcpkg-triplets/: x64-windows-dynamic-boost-static.cmake
.github/workflows/: build.yml  codeql-analysis.yml
cmake/: UpdateTranslations.cmake
packaging/: CMakeLists.txt
packaging/apple/: CMakeLists.txt  Info.plist
packaging/debian/: CMakeLists.txt  changelog
packaging/windows/: CMakeLists.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt  FixDpiDialog.cpp  MainWindow.cpp  OpenWithMenuProvider.cpp  ProjectFilesDialog.cpp  RelinkablePathVisualization.cpp  SettingsDialog.cpp  SettingsDialog.h
src/app_cli/: CMakeLists.txt
src/core/: CMakeLists.txt  ImageViewBase.cpp  ImageViewBase.h  ProjectPages.cpp  SmartFilenameOrdering.cpp
src/core/filters/deskew/: CMakeLists.txt  OrderByCameraFovProvider.cpp  OrderByDewarpedHeightProvider.cpp  OrderByDewarpedWidthProvider.cpp  OrderByPaperBendProvider.cpp
src/core/filters/fix_orientation/: CMakeLists.txt
src/core/filters/output/: CMakeLists.txt  ImageMetadataCopier.cpp  OutputFileParams.cpp
src/core/filters/page_layout/: CMakeLists.txt
src/core/filters/page_split/: CMakeLists.txt  ImageView.cpp  PageLayout.cpp
src/core/filters/select_content/: CMakeLists.txt
src/core/interaction/: CMakeLists.txt  DragHandler.cpp  InteractionHandler.h  ZoomHandler.cpp
src/core/zones/: CMakeLists.txt
src/dewarping/: CMakeLists.txt  Curve.cpp  Directrix.cpp
src/exporting/: CMakeLists.txt  ExportThread.cpp
src/foundation/: CMakeLists.txt  Property.h  Proximity.cpp  VecNT.h
src/imageproc/: CMakeLists.txt  ColorInterpolation.cpp
src/math/: CMakeLists.txt  PolylineIntersector.cpp
