set(CPACK_PACKAGE_VERSION ${CMAKE_PROJECT_VERSION})
set(CPACK_PACKAGE_CONTACT "noobie-iv <noobie-iv@mail.ru>")

IF(WIN32)
    ADD_SUBDIRECTORY(windows)
ELSEIF(APPLE)
    ADD_SUBDIRECTORY(apple)
ELSE()
    set(CMAKE_INSTALL_PREFIX "/usr/")
    set(CPACK_PACKAGING_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})

    ADD_SUBDIRECTORY(debian)
ENDIF()
